--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-aiohttp
-pyrofork
-pymongo
-python-dotenv
-flask
-tgcrypto
-feedparser
-beautifulsoup4
-yt_dlp
+aiohttp==3.8.5
+pyrofork==2.3.25
+pymongo==4.5.0
+python-dotenv==1.0.0
+flask==2.3.3
+werkzeug==2.3.7
+tgcrypto==1.2.5
+feedparser==6.0.10
+beautifulsoup4==4.12.2
+yt-dlp==2023.7.6
